Make range based on distance, not frames